added jumbotron, lower-third, footer, and images

--- a/broadway.html
+++ b/broadway.html
@@ -8,7 +8,7 @@
 </body>
 <head>
 	<title>Welcome to Broadway</title>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">	
+	<link rel="stylesheet" type="text/css" href="broadway.css">	
 </head>
 
 <body>
@@ -32,22 +32,35 @@
 
 	<div class="lowthird">
 		<div class="container">
-			<img src="#" alt="design image">
-			<h2>Design</h2>
-			<p>Make your projects look great and interact beautifully</p>
-			<a href="#">Learn more</a>
-			<img src="#" alt="develop image">
-			<h2>Develop</h2>
-			<p>Use modern tools to turn your design into a web site</p>
-			<a href="#">Learn more</a>
-			<img src="#" alt="deploy image">
-			<h2>Deploy</h2>
-			<p>Use modern tools to turn your design into a website</p>
-			<a href="#">Learn more</a>
+			<div class="design">
+				<img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/design.svg" alt="design image">
+				<h2>Design</h2>
+				<p>Make your projects look great and interact beautifully</p>
+				<a href="#">Learn more</a>
+			</div>
+		</div>
+		<div class = "container">
+			<div class="develop">
+				<img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/develop.svg" alt="develop image">
+				<h2>Develop</h2>
+				<p>Use modern tools to turn your design into a web site</p>
+				<a href="#">Learn more</a>
+			</div>
+		</div>
+		<div class = "container">
+			<div class = "deploy">
+				<img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/deploy.svg" alt="deploy image">
+				<h2>Deploy</h2>
+				<p>Use modern tools to turn your design into a website</p>
+				<a href="#">Learn more</a>
+			</div>
+		</div>
 		</div>
 	</div>
-
-<p>&copy; Broadway 2015</p>
-
+	<div class="footer">
+		<div class="container">
+			<p>&copy; Broadway 2015</p>
+		</div>
+	</div>
 </body>
 </html>
