--- a/broadway.html
+++ b/broadway.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-</head>
-<body>
-
-</body>
-<head>
 	<title>Welcome to Broadway</title>
-	<link rel="stylesheet" type="text/css" href="broadway.css">	
+	<link rel="stylesheet" type="text/css" href="broadway.css">
+
+<!-- link to google font API below. Listing at:
+	https://www.google.com/fonts -->
+
+	<link href = "http://fonts.googleapis.com/css?family=Raleway:400,600", rel = "stylesheet", type = "text/css">
 </head>
 
 <body>
@@ -26,12 +25,12 @@
 	<div class="jumbotron">
 		<div class="container">
 			<h1>We Are Broadway</h1>
-			<a href="#" class="btn"><h2>Get Started</h2></a>
+			<a href="#" class="primebtn">Get Started</a>
 		</div>
 	</div>
 
 	<div class="lowthird">
-		<div class="container">
+		<div class="column">
 			<div class="design">
 				<img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/design.svg" alt="design image">
 				<h2>Design</h2>
@@ -39,7 +38,7 @@
 				<a href="#">Learn more</a>
 			</div>
 		</div>
-		<div class = "container">
+		<div class = "column">
 			<div class="develop">
 				<img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/develop.svg" alt="develop image">
 				<h2>Develop</h2>
@@ -47,7 +46,7 @@
 				<a href="#">Learn more</a>
 			</div>
 		</div>
-		<div class = "container">
+		<div class = "column">
 			<div class = "deploy">
 				<img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/deploy.svg" alt="deploy image">
 				<h2>Deploy</h2>
@@ -55,7 +54,7 @@
 				<a href="#">Learn more</a>
 			</div>
 		</div>
-		</div>
+		<div class = "clearfix"></div>
 	</div>
 	<div class="footer">
 		<div class="container">
