added background images, fonts, other formatting

--- a/innovation_cloud.html
+++ b/innovation_cloud.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Welcome to Innovation Cloud</title>
+		<link href = 'https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel = 'stylesheet' type = 'text/css'>
+		<link href = 'innovation_cloud.css' rel = 'stylesheet' type = 'text/css'>
 	</head>
 	<body>
 		<div class = "header">
@@ -30,6 +32,7 @@
 				<p>Hear industry leaders talk about what worked (and what didn't) so that you can save time on your most challenging projects.</p>
 				<p>Learn about the latest research and technologies that you can use immediately to invent the future.</p>
 			</div>
+			<div class = "clearfix"></div>
 		</div>
 		<div class = "lowsection">
 			<div class = "container">
