--- a/innovation_cloud.html
+++ b/innovation_cloud.html
@@ -6,24 +6,27 @@
 		<link href = 'innovation_cloud.css' rel = 'stylesheet' type = 'text/css'>
 	</head>
 	<body>
+
 		<div class = "header">
 			<div class = "container">
 				<h1>Innovation Cloud</h1>
 				<p>Connect Your Ideas Globally</p>
-				<a href = "#">Learn More</a>
+				<a href = "#" class = "btn">Learn More</a>
 			</div>
 		</div>
+
 		<div class = "navbar">
 			<div class = "container">
 				<ul>
-					<a href = "#"><li>Register</li></a>
-					<a href = "#"><li>Schedule</li></a>
-					<a href = "#"><li>Sponsors</li></a>
-					<a href = "#"><li>About</li></a>
-					<a href = "#"><li>Contact</li></a>
+					<li>Register</li>
+					<li>Schedule</li>
+					<li>Sponsors</li>
+					<li>About</li>
+					<li>Contact</li>
 				</ul>
 			</div
 		</div>
+
 		<div class = "midarea">
 			<div class = "container">
 				<img src="https://s3.amazonaws.com/codecademy-content/projects/innovation-cloud/cloud.svg">
@@ -32,19 +35,21 @@
 				<p>Hear industry leaders talk about what worked (and what didn't) so that you can save time on your most challenging projects.</p>
 				<p>Learn about the latest research and technologies that you can use immediately to invent the future.</p>
 			</div>
-			<div class = "clearfix"></div>
 		</div>
+
 		<div class = "lowsection">
 			<div class = "container">
 				<h2>Stay Connected</h2>
 				<p>Receive weekly insights from industry insiders.</p>
-				<a href = "#">Join</a>	
+				<a href = "#" class = "btn">Join</a>	
 			</div>
 		</div>
+
 		<div class = "footer">
 			<div class = "container">
 				<p>&copy; Innovation Cloud Conference</p>
 			</div>
 		</div>
+		
 	</body>
 </html>
