--- a/move.html
+++ b/move.html
@@ -16,11 +16,15 @@
 	</div>
 
 	<div class = 'part2'>
-		<div class='container'>
+		<div class='column'>
 			<h2>Move</h2>
 			<p>Become more active by tracking your runs, rides, and walks.</p>
+		</div>
+		<div class='column'>
 			<h2>Sync</h2>
 			<p>Access your activity on your phone, tablet, or computer.</p>
+		</div>
+		<div class='column'>
 			<h2>Compete</h2>
 			<p>Set personal challenges and see how you rank against your friends.</p>
 		</div>
