--- a/move.html
+++ b/move.html
@@ -15,38 +15,41 @@
 		</div>
 	</div>
 
-	<div class = 'part2'>
-		<div class='column'>
-			<h2>Move</h2>
-			<p>Become more active by tracking your runs, rides, and walks.</p>
-		</div>
-		<div class='column'>
-			<h2>Sync</h2>
-			<p>Access your activity on your phone, tablet, or computer.</p>
-		</div>
-		<div class='column'>
-			<h2>Compete</h2>
-			<p>Set personal challenges and see how you rank against your friends.</p>
+	<div class = 'supporting'>
+		<div class='container'>
+			<div class='column'>
+				<h2>Move</h2>
+				<p>Become more active by tracking your runs, rides, and walks.</p>
+			</div>
+			<div class='column'>
+				<h2>Sync</h2>
+				<p>Access your activity on your phone, tablet, or computer.</p>
+			</div>
+			<div class='column'>
+				<h2>Compete</h2>
+				<p>Set personal challenges and see how you rank against your friends.</p>
+			</div>
+			<div class='clearfix'></div>
 		</div>
 	</div>
 
-	<div class='part3'>
+	<div class='feature'>
 		<div class='container'>
 			<h2>Move.Rest.Recover.Move.</h2>
 		</div>
 	</div>
 
-	<div class='part4'>
+	<div class='supporting'>
 		<div class='container'>
 			<h2>Go Premium</h2>
 			<p>Receive recommendations based on your activity to level up.</p>
-			<a href="#">Learn More</a>
+			<a href="#" class='btn'>Learn More</a>
 		</div>
 	</div>
 
 	<div class='footer'>
 		<div class='container'>
-			<h2>Stop Scrolling.Start Moving</h2>
+			<h2>Stop Scrolling. Start Moving</h2>
 			<a href="#" class='btn'>Start Now</a>
 		</div>
 	</div>
