--- a/shutterbugg.html
+++ b/shutterbugg.html
@@ -76,9 +76,9 @@
 				<div class='col-md-4'>
 					<h3>Company</h3>
 					<ul>
-						<li></li>
-						<li></li>
-						<li></li>
+						<li>Careers</li>
+						<li>Terms</li>
+						<li>Help</li>
 					</ul>
 				</div>
 				<div class='col-md-4'>
