restored alignment, forgot to add bootstrap link to HTML. Now getting white block in jumbotron div, which is covering the background image. Otherwise site is largely completed.

--- a/junction.html
+++ b/junction.html
@@ -5,6 +5,7 @@
 	<title>Junction</title>
 	<link rel="stylesheet" type="text/css" href="junction.css">
 	<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 </head>
 
@@ -46,7 +47,7 @@
 			</div>
 			<div class='button'>
 				<div class='container'>
-					<p><a href='#'>Join</a></p>
+					<a href='#'>Join</a>
 				</div>
 			</div>
 		</div>
