--- a/junction.html
+++ b/junction.html
@@ -1,57 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-
-	<title>Junction</title>
-	<link rel="stylesheet" type="text/css" href="junction.css">
-	<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="junction.css">
 </head>
-
 <body>
-
-	<div class='header'>
-		<div class='container'>
-			<div class='navbar'>
-				<ul>
-					<li><img src="https://s3.amazonaws.com/codecademy-content/projects/junction/logo.svg"></li>
-					<li><a href='#'>About</a></li>
-					<li><a href='#'>Blog</a></li>
-					<li><a href='#'>Help</a></li>
-					<li><a href='#'>Contact</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-
-	<div class='jumbotron'>
-		<div class='container'>
-			<h1>Meet Junction</h1>
-			<div class='row'>
-				<div class='col-md-4'>
-					<img src="https://s3.amazonaws.com/codecademy-content/projects/junction/read.svg">
-					<h3>Read</h3>
-					<p>Discover new stories and follow your favorite writers.</p>
-				</div>
-				<div class='col-md-4'>
-					<img src="https://s3.amazonaws.com/codecademy-content/projects/junction/write.svg">
-					<h3>Write</h3>
-					<p>Create stories about our world, or entirely new worlds.</p>
-				</div>
-				<div class='col-md-4'>
-					<img src="https://s3.amazonaws.com/codecademy-content/projects/junction/talk.svg">
-					<h3>Talk</h3>
-					<p>Join the conversation by talking with your favorite readers and your fans.</p>
-				</div>
-			</div>
-			<div class='button'>
-				<div class='container'>
-					<a href='#'>Join</a>
-				</div>
-			</div>
-		</div>
-	</div>
-
+    <div class="header">
+        <div class="container">
+            <div class="row">
+                <img class="logo" src="https://s3.amazonaws.com/codecademy-content/projects/junction/logo.svg" height="36" width="36">
+                <ul class="nav">
+                    <li>About</li>
+                    <li>Blog</li>
+                    <li>Help</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Meet Junction</h1> 
+        </div>
+    </div>
+    <div class="supporting">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="read" src="https://s3.amazonaws.com/codecademy-content/projects/junction/read.svg" height="128" width="128">
+                    <h2>Read</h2> 
+                    <p>Discover new stories and follow your favorite writers.</p>
+                </div>
+                <div class="col-md-4">
+                    <img class="write" src="https://s3.amazonaws.com/codecademy-content/projects/junction/write.svg" height="128" width="128">
+                    <h2>Write</h2> 
+                    <p>Create stories about our world, or entirely new worlds.</p>
+                </div>
+                <div class="col-md-4">
+                    <img class="talk" src="https://s3.amazonaws.com/codecademy-content/projects/junction/talk.svg" height="128" width="128">
+                    <h2>Talk</h2> 
+                    <p>Join the conversation by talking with your favorite readers and your fans.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="download">
+        <div class="container"> <a href="#" class="btn btn-default"><span>Join</span></a> 
+        </div>
+    </div>
 </body>
 </html>
